# woods

./: .gitignore  README.md  default.nix  gimmerrors.cabal  woods.cabal  woods.nix
.github/workflows/: haskell.yml
gimmerrors/: Main.hs
proto/: semanticdb.proto
src/: CTags.hs  FindReferences.hs  Helpers.hs  Hover.hs  JSONRPC.hs  JumpToDefinition.hs  LSP.hs  Main.hs  Rename.hs  SarsiConnect.hs  Sbt.hs
test/: FindReferencesSpec.hs  Fixtures.hs  JumpToDefinitionSpec.hs
test/resources/: build.sbt  tags
test/resources/module/src/main/scala/: Module.scala
test/resources/src/main/scala/: Bar.scala  Foo.scala
test/resources/whatever-deps-folder/: Predef.scala
woods/: Main.hs
