name:                gimmerrors
version:             0.1.0.0
author:              Thomas Droxler
maintainer:          thomas.droxler@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable gimmerrors
  main-is:             Main.hs
  build-depends:
      base >=4.10 && <4.11
    , network
    , bytestring
    , haskell-lsp-types == 0.2.2.0
    , attoparsec
    , aeson
    ,  containers
  hs-source-dirs:      src
  default-language:    Haskell2010
