name:                gimmerrors
version:             0.1.0.0
author:              Thomas Droxler
maintainer:          thomas.droxler@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable gimmerrors
  main-is:             Main.hs
  build-depends:
      base >=4.12 && <4.13
    , network == 3.1.0.1
    , bytestring
    , haskell-lsp-types == 0.15.0.0
    , attoparsec
    , aeson
    ,  containers
  hs-source-dirs:      src
  other-modules : LSP
  default-language:    Haskell2010
