name:                woods
version:             0.1.0.0
author:              Thomas Droxler
maintainer:          thomas.droxler@gmail.com
build-type:          Custom
extra-source-files:  proto/semanticdb.proto
cabal-version:       >=1.10

custom-setup
  setup-depends:
      base >=4.12 && <4.13
    , Cabal
    , proto-lens-setup >= 0.4 && < 0.5


library
  build-depends:
      base                            >= 4.12       && < 4.13
    , network                         >= 3.1        && < 3.2
    , bytestring                      >= 0.10       && < 0.11
    , haskell-lsp-types               >= 0.15       && < 0.16
    , attoparsec                      >= 0.13       && < 0.14
    , aeson                           >= 1.4        && < 1.5
    , microlens                       >= 0.4        && < 0.5
    , proto-lens                      >= 0.5        && < 0.6
    , proto-lens-runtime              >= 0.5        && < 0.6
    , text                            >= 1.2        && < 1.3
    , directory                       >= 1.3        && < 1.4
    , filemanip                       >= 0.3        && < 0.4
    , filepath                        >= 1.4        && < 1.5
  hs-source-dirs:      src
  other-modules:
  exposed-modules:
       JSONRPC
     , LSP
     , Helpers
     , Sbt
     , JumpToDefinition
     , Proto.Semanticdb
     , Proto.Semanticdb_Fields
  autogen-modules: Proto.Semanticdb, Proto.Semanticdb_Fields
  default-language:    Haskell2010
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

executable woods
  main-is: Main.hs
  other-modules:
    Paths_woods
     , Proto.Semanticdb
     , Proto.Semanticdb_Fields
  hs-source-dirs: woods
  autogen-modules: Proto.Semanticdb, Proto.Semanticdb_Fields
  build-depends:
      base
    , woods == 0.1.0.0
    , network
    , bytestring
    , haskell-lsp-types
    , aeson
    , microlens
    , proto-lens
    , proto-lens-runtime
    , text
  default-language:    Haskell2010

test-suite test-woods
  main-is: Spec.hs
  hs-source-dirs:      test
  other-modules:
      JumpToDefinitionSpec
    , Fixtures
    , Paths_woods
  build-depends:
      base
    , woods == 0.1.0.0
    , haskell-lsp-types
    , microlens
    , proto-lens
    , hspec
    , directory
    , text
    , bytestring
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-tool-depends: hspec-discover:hspec-discover <= 2.6 && < 2.7
