name:                woods
version:             0.1.0.0
author:              Thomas Droxler
maintainer:          thomas.droxler@gmail.com
build-type:          Custom
extra-source-files:  proto/semanticdb.proto
cabal-version:       >=1.10

custom-setup
  setup-depends:
      base >=4.12 && <4.14
    , Cabal
    , proto-lens-setup >= 0.4 && < 0.5


library
  build-depends:
      base                            >= 4.12       && < 4.14
    , sarsi                           >= 0.0.5.1
    , network                         >= 3.1        && < 3.2
    , bytestring                      >= 0.10       && < 0.11
    , haskell-lsp-types               >= 0.15       && < 0.22
    , attoparsec                      >= 0.13       && < 0.14
    , aeson                           >= 1.4        && < 1.5
    , microlens                       >= 0.4        && < 0.5
    , proto-lens                      >= 0.7        && < 0.8
    , proto-lens-runtime              >= 0.7        && < 0.8
    , text                            >= 1.2        && < 1.3
    , directory                       >= 1.3        && < 1.4
    , filemanip                       >= 0.3        && < 0.4
    , filepath                        >= 1.4        && < 1.5
    , process                         >= 1.6        && < 1.7
    , directory                       >= 1.3        && < 1.4
    , machines                        >= 0.7        && < 0.8
    , machines-io                     >= 7.0        && < 7.1
    , stm                             >= 2.4        && < 2.6
    , containers                      >= 0.5        && < 0.7
  hs-source-dirs:      src
  other-modules:
  exposed-modules:
       JSONRPC
     , LSP
     , Helpers
     , SarsiConnect
     , Sbt
     , JumpToDefinition
     , FindReferences
     , Rename
     , CTags
     , Proto.Semanticdb
     , Proto.Semanticdb_Fields
  autogen-modules: Proto.Semanticdb, Proto.Semanticdb_Fields
  default-language:    Haskell2010
  build-tool-depends: proto-lens-protoc:proto-lens-protoc

executable woods
  main-is: Main.hs
  other-modules:
    Paths_woods
     , Proto.Semanticdb
     , Proto.Semanticdb_Fields
  hs-source-dirs: woods
  autogen-modules: Proto.Semanticdb, Proto.Semanticdb_Fields
  build-depends:
      base
    , sarsi                           >= 0.0.5.1
    , woods == 0.1.0.0
    , network
    , bytestring
    , haskell-lsp-types
    , aeson
    , microlens
    , proto-lens
    , proto-lens-runtime
    , text
  default-language:    Haskell2010

test-suite test-woods
  main-is: Spec.hs
  hs-source-dirs:      test
  other-modules:
      JumpToDefinitionSpec
    , FindReferencesSpec
    , Fixtures
    , Paths_woods
  build-depends:
      base
    , woods == 0.1.0.0
    , haskell-lsp-types
    , microlens
    , proto-lens
    , hspec
    , directory
    , text
    , bytestring
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-tool-depends: hspec-discover:hspec-discover <= 2.7 && < 2.8
